--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
         <div class="container header-container">
             <div class="logo">
                 <!-- <img src="" alt="AstroDuniya Logo"> -->
