privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <link rel="stylesheet" href="/privacy.css">
+        <link rel="stylesheet" href="privacy.css">
         <div class="container header-container">
             <div class="logo">
                 <h1>AstroDuniya</h1>
