--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
     <section class="about" id="about">
         <div class="container about-container">
             <div class="about-image">
-                <img src="/asset/manish_tripathi.jpg" alt="Manish Tripathi in Haridwar">
+                <img src="asset/manish_tripathi.jpg" alt="Manish Tripathi in Haridwar">
             </div>
             <div class="about-content">
                 <h2>About Manish Tripathi</h2>
