--- a/index.html
+++ b/index.html
@@ -971,6 +971,7 @@
             </div>
             <div class="copyright">
                 &copy; 2023 AstroDuniya - Manish Tripathi. All Rights Reserved.
+                <br>  Created By- Chandrakant   <a href="https://www.instagram.com/chandrakant_here/?hl=="><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </footer>
