--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
     <section class="about" id="about">
         <div class="container about-container">
             <div class="about-image">
-                <img src="asset/manish_tripathi.jpg" alt="Manish Tripathi in Haridwar">
+                <img src="/asset/manish_tripathi.jpg" alt="Manish Tripathi in Haridwar">
             </div>
             <div class="about-content">
                 <h2>About Manish Tripathi</h2>
@@ -862,7 +862,62 @@
         </div>
     </section>
 
-
+    <section class="add-review" id="reviews">
+        <div class="container">
+            <div class="section-title">
+                <h2>Share Your Experience</h2>
+                <p>We value your feedback. Share your experience with Manish's astrological guidance.</p>
+            </div>
+            <div class="review-form-container fade-in">
+                <form method="POST" id="review-form">
+                    <input type="hidden" name="access_key" value="80b71eb3-932f-4e79-a093-de4016f4fc2d">
+                    <input type="hidden" name="subject" value="New Review Submission from AstroDuniya">
+                    
+                    <div class="form-group">
+                        <label for="review-name">Your Name</label>
+                        <input type="text" id="review-name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="review-email">Email (optional)</label>
+                        <input type="email" id="review-email" name="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="review-title">Title of Your Experience</label>
+                        <input type="text" id="review-title" name="title" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="review-service">Service Received</label>
+                        <select id="review-service" name="service">
+                            <option value="Horoscope Reading" style="color: black;">Horoscope Reading</option>
+                            <option value="Vastu Consultation" style="color: black;">Vastu Consultation</option>
+                            <option value="Astrological Remedies" style="color: black;">Astrological Remedies</option>
+                            <option value="Puja/Rituals" style="color: black;">Puja/Rituals</option>
+                            <option value="Gemstone Recommendation" style="color: black;">Gemstone Recommendation</option>
+                            <option value="Other" style="color: black;">Other</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="review-rating">Rating</label>
+                        <div class="rating-stars">
+                            <i class="far fa-star" data-rating="1"></i>
+                            <i class="far fa-star" data-rating="2"></i>
+                            <i class="far fa-star" data-rating="3"></i>
+                            <i class="far fa-star" data-rating="4"></i>
+                            <i class="far fa-star" data-rating="5"></i>
+                        </div>
+                        <input type="hidden" id="review-rating" name="rating" value="0">
+                    </div>
+                    <div class="form-group">
+                        <label for="review-message">Your Experience</label>
+                        <textarea id="review-message" name="message" required></textarea>
+                    </div>
+                    <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+                    <button type="submit" class="cta-button">Submit Review</button>
+                    <div id="review-result"></div>
+                </form>
+            </div>
+        </div>
+    </section>
 
     <section class="contact" id="contact">
         <div class="container">
@@ -971,7 +1026,6 @@
             </div>
             <div class="copyright">
                 &copy; 2023 AstroDuniya - Manish Tripathi. All Rights Reserved.
-                <br>  Created By- Chandrakant   <a href="https://www.instagram.com/chandrakant_here/?hl=="><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </footer>
